--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.76.6",
+    "react-native-moengage": "11.1.3",
+    "react-native-moengage-inbox": "5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
